cloud-native/kubernetes/data-plane/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: default
  annotations:
    lb.kubesphere.io/v1alpha1: openelb
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: LoadBalancer
