cloud-native/kubernetes/data-plane/nginx-svc_NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-np
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 8100
    protocol: TCP
    targetPort: 80
